<resources>
    <string name="app_name" translatable="false">Cookie</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="timer" translatable="false">00:00</string>
    <string name="title_timer">Timer</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_pause">Pause</string>
    <string name="ingredient_hint">1 clove of garlic</string>
    <string name="ingredient_label">Ingredients</string>
    <string name="steps_label">Steps</string>
    <string name="steps_hint">First, crush the garlic…</string>
    <string name="food_image">Food Image</string>
    <string name="choose_image">Choose an Image…</string>
    <string name="save">Save</string>
    <string name="description">Food Image</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="name_label">Name</string>
    <string name="name_hint">Garlic Paste</string>
    <string name="timer_done">Timer Done!</string>
    <string name="lets_cook">Let\'s continue cooking.</string>
    <string name="timer_running">Timer is Running.</string>
    <string name="end">End in: %1$s</string>
    <string name="timer_paused">Timer is paused.</string>
    <string name="resume">Resume?</string>
    <string name="set_timer">Set Timer</string>
    <string name="calories">Calories</string>
    <string name="nutrition_list">Nutrition List</string>
    <string name="add_nutrition">Add Nutrition</string>
    <string name="nutrition_hint">Chicken</string>
    <string name="calories_hint" translatable="false">200</string>
    <string name="about_us">About Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_about_us">AboutUsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="about_us_message">Hello! This application is made by Prissy Azzahra as an assignment for Mobile Programming.</string>
    <string name="_10">10</string>
    <string name="title_permission">Permission Denied</string>
    <string name="desc_permission" translatable="false">This app needs to access your files to add a picture for your recipe. You can allow permissions by going to the permissions tab in your app settings.</string>
    <string name="settings">GO TO SETTINGS</string>
    <string name="restaurant_list">Restaurant List</string>
    <string name="title_connection">No Connection</string>
    <string name="desc_connection">Please connect to the Internet to get lists of restaurants.</string>
</resources>
