<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".ui.addrecipe.AddRecipeFragment">

        <TextView
            android:textColor="@color/darkBlue"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredient_label"
            android:fontFamily="@font/nunito_semibold"/>

        <EditText
            android:hint="@string/ingredient_hint"
            android:autofillHints="no"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_light"
            />

        <TextView
            android:textColor="@color/darkBlue"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:fontFamily="@font/nunito_semibold"/>

        <EditText
            android:hint="@string/name_hint"
            android:autofillHints="no"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_light"
            />

        <TextView
            android:textColor="@color/darkBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/steps_label"
            android:fontFamily="@font/nunito_semibold"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:hint="@string/steps_hint"
            android:autofillHints="no"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_light"
            />

        <TextView
            android:textColor="@color/darkBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_image"
            android:fontFamily="@font/nunito_semibold"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/chooseImageButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_image"
            android:textColor="@color/colorAccent"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/description"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/save"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"

            />

        <TextView
            android:id="@+id/text_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>
</ScrollView>